--- a/website/static/getting-started.html
+++ b/website/static/getting-started.html
@@ -90,7 +90,7 @@
             <a href="https://github.com/prestodb/presto" target="_blank" rel="noopener noreferrer"
               class="navbar__item navbar__link nav-icon nav-github"></a>
             <a href="https://twitter.com/prestodb" target="_blank" rel="noopener noreferrer"
-              class="navbar__item navbar__link nav-icon nav-twitter"></a><a href="https://prestodb.slack.com/"
+              class="navbar__item navbar__link nav-icon nav-twitter"></a><a href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw"
               target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-slack"></a><a
               href="https://www.linkedin.com/company/presto-foundation/" target="_blank" rel="noopener noreferrer"
               class="navbar__item navbar__link nav-icon nav-linkedin"></a>
@@ -172,7 +172,7 @@
         <div class="col-12 col-md-6 mt-5 mt-md-0">
           <h2 class="text-center mb-3">Get Help</h2>
           <ul>
-            <li>Join the <a href="https://prestodb.slack.com/" target="_blank">Presto slack channel</a> to ask questions
+            <li>Join the <a href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw" target="_blank">Presto slack channel</a> to ask questions
               and get help running Presto.</li>
             <li>Check out our <a href="tutorials.html">tutorials section</a> for help getting started.</li>
           </ul>
@@ -219,7 +219,7 @@
         <div class="col footer__col">
           <ul class="footer__items clean-list">
             <li class="footer__title">Community</li>
-            <li class="footer__item"><a href="https://prestodb.slack.com/" target="_blank" rel="noopener noreferrer"
+            <li class="footer__item"><a href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw" target="_blank" rel="noopener noreferrer"
                 class="footer__link-item">Slack <svg width="13.5" height="13.5" aria-hidden="true" viewBox="0 0 24 24"
                   class="iconExternalLink_node_modules-@docusaurus-theme-classic-lib-theme-IconExternalLink-styles-module">
                   <path fill="currentColor"
