--- a/website/static/what-is-presto.html
+++ b/website/static/what-is-presto.html
@@ -221,7 +221,7 @@
           <h3 class="mb-3">Fast, Reliable &amp; Efficient</h3>
           <p>Data infrastructure costs can explode, especially with proprietary systeems like data warehouses, as
             the data size and users workloads grow.</p>
-          <p>Presto is battle-tested at Meta and Uber and can scale to meet growing data sizes adn workloads. It's
+          <p>Presto is battle-tested at Meta and Uber and can scale to meet growing data sizes and workloads. It's
             faster and more efficient than other engines because it's optimized for large numbers of small
             queries, so you can query data at better price-performance compared to proprietary systems.</p>
         </div>
