--- a/website/static/getting-started.html
+++ b/website/static/getting-started.html
@@ -135,7 +135,7 @@
                         <div class="card-footer small pb-3 d-flex flex-column" style="min-height:4.25rem;place-content:center;"><div>${item.footer}</div></div>`;
         out += `</div>`;
         return out;
-      }  
+      }
     </script>
     <div class="container my-5">
       <div class="row">
@@ -180,8 +180,8 @@
         <div class="card-group py-5">
           <div class="card text-center">
             <div class="card-header bg-white">
-              <h4 class="card-title my-4"><img src="img/logo-oreilly-color.svg" alt="OREILLY"
-                  style="width: 100%; max-width: 200px;"></h4>
+              <h4 class="card-title my-1"><img src="img/oreilley-with-book.png" alt="OREILLY"
+                  style="width: 100%; max-width: 270px;"></h4>
             </div>
             <div class="card-body">
               <p class="card-text mb-3"><a
