--- a/website/static/index.html
+++ b/website/static/index.html
@@ -96,7 +96,7 @@
   </header>
 
 <section class="bg-silver-gradient">
-<div class="container-fluid wrapper pb-5">
+<div class="container-fluid wrapper pb-3">
   <div class="billboard sequential-fadeup pt-5">
     <img src="img/logo-presto-color.svg" alt="Presto Logo" class="billboard-logo pt-1" />
     <h1 class="pt-0 mb-3">Fast and Reliable SQL Engine for Data&nbsp;Analytics and the Open&nbsp;Lakehouse</h1>
@@ -109,10 +109,31 @@
         src="img/icon-github-star.svg" alt="star" style="max-width:1.5rem" />&nbsp;<span  class="countup" data-start="10" data-end="13.7" data-step="0.2" data-places="1">13.7</span>K
     </a>
   </div>
+</div>
+
+<section style="background:#FFA601;position:relative;">
+  <div style="position:absolute;inset: 0 75% 0 0;background:url('img/icon-presto-dots-color.svg') right center no-repeat transparent;background-size:cover;filter:brightness(0) invert(1);opacity:0.25"></div>
+  <div class="container-fluid wrapper py-3">
+    <div class="row" style="max-width:800px;margin:0 auto; text-align:center;">
+      <div class="col-12 col-md-6 mx-auto text-white text-center" style="font-size:1.2rem;" ><img src="img/logo-prestocon-white.svg" alt="prestocon" style="max-width:300px;"  /><br/>
+        <b>DECEMBER 7-8, 2022</b>
+        </div>
+        <div class="col-12 col-md-6 mx-auto text-white text-center" style="font-size:1.2rem;" >
+          <div>COMPUTER HISTORY MUSEUM</div>
+          <div class="small" style="font-size:14px">MOUNTAIN VIEW, CA</div>
+        <a href="https://events.linuxfoundation.org/prestocon/register/" class="btn btn-sm btn-light  mt-3" target="_blank">Register</a>
+        &nbsp;<a href="https://events.linuxfoundation.org/prestocon/program/cfp/" class="btn btn-sm btn-light  mt-3" target="_blank">Submit to Speak</a>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="container-fluid wrapper pb-5">
   <div class="my-5 text-center">
     <div class="sequential-fadeup">
       <h2>What is Presto?</h2>
-      <h5 style="max-width:700px;margin:0 auto 1em">Presto is an open source SQL query engine that’s fast, reliable, and efficient at scale. Run ad hoc queries against data sources of all sizes ranging from gigabytes to petabytes.</h5>
+      <h5 style="max-width:700px;margin:0 auto 1em">Presto is an open source SQL query engine that's fast, reliable, and efficient at scale. Use Presto to run interactive/ad hoc queries at sub-second performance for your high volume apps.</h5>
           <div>
             <a href="what-is-presto.html" class="btn btn-blue">Learn More</a>
           </div>
@@ -123,11 +144,10 @@
   </div>
 </div>
 </section>
-
 <section class="bg-dkblue bg-side-dots text-white">
   <div class="container-fluid wrapper py-5">
     <div class="row" style="max-width:1100px;margin:0 auto">
-      <div class="col-12 col-md-9 text-white text-center text-md-start" style="font-size:1.2rem; place-content:center;" ><h3 class="text-white">Explore Key Innovations <i>Only Available in&nbsp;Presto:</i></h3>
+      <div class="col-12 col-md-9 text-white text-center text-md-start" style="font-size:1.2rem; place-content:center;" ><h3 class="text-white" style="font-size:1.5rem;">Explore Key Innovations <i>Only Available in&nbsp;Linux Foundation Presto:</i></h3>
         Presto-on-Spark | Project Aria | Disaggregated Coordinator | RaptorX</div>
       <div class="col-12 col-md-3 text-white d-flex" style="flex-direction:column;place-content:center;"><a href="what-is-presto.html#key_innovation" class="btn btn-outline-light btn-lg my-2">Learn More</a></div>
     </div>
@@ -140,8 +160,15 @@
       <div class="col text-center mb-3 mx-auto" style="max-width:1024px;">
         <h2 class="my-4">Presto runs reliably at massive scale</h2>
         <p style="max-width:800px;margin:0 auto">See how some the largest internet-scale companies are using Presto today. It doesn't matter if you're operating at Meta-like scale or at just a few nodes - Presto is for everyone! </p>
-
         <div class="container-fluid" style="width: 100%;margin: 1rem auto; text-align:left;">
+        <div class="row py-3" style="border-bottom: 1px solid #ccc;" >
+          <div class="col-12 col-md-4 pt-2 text-center " style="padding-right:20px;text-align:center;"><img src="img/presto-users/logo-meta.svg" className="" alt="Meta" style="max-width:180px;" /></div>
+
+            <div class="col-12 col-md-5  text-center text-md-start" colspan="2"><b><span  class="countup" data-start="0" data-end="300" data-step="10" data-places="0">300</span>PB</b> data lakehouse<br/>
+              <b>1K</b> daily active users<br/>
+              <b><span class="countup" data-start="0" data-end="30" data-step="1" data-places="0">30</span>K</b> queries/day</div>
+              <div class="col-12 col-md-3  text-center text-md-start"><a href="https://www.youtube.com/watch?v=GHXjjfGyCw8&list=PLJVeO1NMmyqXHoLuUJtulMDU0yBgSL0GH&index=8" class="btn btn-sm btn-primary mt-3" target="_blank" >See Presentation &rarr;</a></div>
+        </div>
           <div class="row py-3" style="border-bottom: 1px solid #ccc;">
             <div class="col-12 col-md-4 pt-2 text-center " style="padding-right:20px;text-align:center;"><img src="img/presto-users/logo-uber.svg" className="" alt="Uber" style="max-width:150px;" /><br/>
             </div>
@@ -151,25 +178,17 @@
               <div class="col-12 col-md-3  text-center text-md-start"><b><span  class="countup" data-start="0" data-end="7" data-step="1" data-places="0">7</span>K</b> weekly active users<br/>
                 <b><span  class="countup" data-start="0" data-end="100" data-step="5" data-places="0">100</span>M+</b> queries/day<br/>
                 <b><span  class="countup" data-start="0" data-end="50" data-step="2" data-places="0">50</span>PB</b> HDFS bytes read/day</div>
-                <div class="col-12 col-md-3  text-center text-md-start"><a href="https://ahana.io/case-studies/uber?utm_source=prestodb&utm_medium=homepage&utm_campaign=ubercs" class="btn btn-sm btn-primary mt-3" target="_blank" >Read Case Study &rarr;</a></div>
+                <div class="col-12 col-md-3  text-center text-md-start"><a href="https://www.youtube.com/watch?v=CXuF-3S2uWo" class="btn btn-sm btn-primary" target="_blank" >See presentation &rarr;</a><br/><a href="https://ahana.io/case-studies/uber?utm_source=prestodb&utm_medium=homepage&utm_campaign=ubercs" class="btn btn-sm btn-primary mt-3" target="_blank" >Read Case Study &rarr;</a></div>
           </div>
-          <div class="row py-3" style="border-bottom: 1px solid #ccc;">
+          <div class="row py-3" style="">
           <div class="col-12 col-md-4 pt-2 text-center " style="padding-right:20px;text-align:center;"><img src="img/presto-users/logo-bytedance.svg" className="" alt="ByteDance" style="max-width:200px;" /></div>
-          
+
             <div class="col-12 col-md-5  text-center text-md-start" colspan="2"><b><span class="countup" data-start="0" data-end="10" data-step="1" data-places="0">10</span>K+</b> compute cores<br/>
               <b>1M</b> queries/day</div>
               <div class="col-12 col-md-3  text-center text-md-start"><a href="https://static.sched.com/hosted_files/prestocon2021/1f/Presto%40Bytedance.pdf" class="btn btn-sm btn-primary mt-3" target="_blank" >See Presentation &rarr;</a></div>
         </div>
-        <div class="row py-3" >
-          <div class="col-12 col-md-4 pt-2 text-center " style="padding-right:20px;text-align:center;"><img src="img/presto-users/logo-meta.svg" className="" alt="Meta" style="max-width:180px;" /></div>
-          
-            <div class="col-12 col-md-5  text-center text-md-start" colspan="2"><b><span  class="countup" data-start="0" data-end="300" data-step="10" data-places="0">300</span>PB</b> data lakehouse<br/>
-              <b>1K</b> daily active users<br/>
-              <b><span class="countup" data-start="0" data-end="30" data-step="1" data-places="0">30</span>K</b> queries/day</div>
-              <div class="col-12 col-md-3  text-center text-md-start"><a href="https://www.youtube.com/watch?v=GHXjjfGyCw8&list=PLJVeO1NMmyqXHoLuUJtulMDU0yBgSL0GH&index=8" class="btn btn-sm btn-primary mt-3" target="_blank" >See Presentation &rarr;</a></div>
         </div>
-        </div>
-          <h5><a href="powered-by-presto.html">Check out how other companies are using Presto today.</a></h5>
+          <h5><a href="powered-by-presto.html">See the Powered by Presto page</a></h5>
       </div>
     </div>
     <hr class="dots">
@@ -180,8 +199,9 @@
     <div class="col-12 col-sm-4 text-center image"><object data="img/graphic-querydata.svg"
         type="image/svg+xml"></object></div>
     <div class="col-12 col-sm-8 fadein px-md-5">
-      <h4>Query data wherever it lives</h4>
-      <p>Presto allows querying data where it lives and a single Presto query can combine data from multiple sources,
+      <h4>Federate queries and query data where it lives - data lakes, lakehouses, and more</h4>
+      <p>Presto can query relational &amp; NoSQL databases, data warehouses, data lakes and more and has dozens of
+        connectors available today. It also allows querying data where it lives and a single Presto query can combine data from multiple sources,
         allowing for analytics across your entire organization.</p>
     </div>
   </div>
@@ -197,9 +217,8 @@
     <div class="col-12 col-sm-4 text-center image"><object data="img/graphic-federated.svg"
         type="image/svg+xml"></object></div>
     <div class="col-12 col-sm-8 fadein px-md-5">
-      <h4>Federate your queries</h4>
-      <p>Presto can query relational &amp; NoSQL databases, data warehouses, data lakes and more and has dozens of
-        connectors available today.</p>
+      <h4>Standardize your SQL with one engine</h4>
+      <p>Presto can be used for interactive and batch workloads, small and large amounts of data, and scales from a few to thousands of users. With Presto, you get 1 familar ANSI SQL language and 1 engine for your data analytics so you don't need to graduate to another lakehouse engine.</p>
     </div>
   </div>
   <div class="row my-5 align-items-center value_props">
@@ -207,7 +226,7 @@
         type="image/svg+xml"></object></div>
     <div class="col-12 col-sm-8 fadein px-md-5">
       <h4>Open source</h4>
-      <p>Presto is a neutrally governed open source project under The Linux Foundation. Run Presto wherever you want,
+      <p>Presto is a neutrally governed open source project under The Linux Foundation with dozens of member companies (and growing!). Run Presto wherever you want,
         on-prem or in any&nbsp;cloud.</p>
     </div>
   </div>
@@ -273,7 +292,7 @@
       <div class="col-12 col-md-6 text-center p-3"><img src="img/logo-presto-foundation.svg"
           alt="presto foundation" style="width: 100%; max-width: 420px;"></div>
       <div class="col-12 col-md-6 py-3 px-md-5">The Presto Foundation is the organization that oversees the
-        development of thePresto open source project. Presto is an independent open-source project and not controlled by any single company. Members of the Presto Foundation provide essential financial
+        development of the Presto open source project. Presto is an independent open-source project and not controlled by any single company. Members of the Presto Foundation provide essential financial
         support for the collaborative development process, including tooling, infrastructure, and community conferences.
         <a href="join.html">Learn more and become a Member</a>.</div>
     </div>
