--- a/website/static/join.html
+++ b/website/static/join.html
@@ -203,6 +203,20 @@
         </div>
     </div>
 </section>
+<section class="container-fluid wrapper py-5" style="max-width: 1200px;">
+    <div class="container-fluid">
+        <div class="row text-center sequential-fadein">
+            <div class="col">
+                <h2>Community Sponsors</h2>
+                <hr class="dots">
+            </div>
+        </div>
+        <div class="row sequential-fadein" style="place-content: center;">
+            <div class="col-12 text-center p-3 mb-5"><img src="img/logo-sponsor-intel.svg"
+                    alt="presto foundation" style="width: 100%; max-width: 220px;"></div>
+        </div>
+    </div>
+</section>
 
 <footer class="footer footer-dark">
   <div class="container container-fluid">
