--- a/website/static/tutorials.html
+++ b/website/static/tutorials.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>Presto | Tutorials</title>
-    <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="static/css/custom.css" type="text/css" />
-    <link rel="stylesheet" href="static/css/effects.css" type="text/css" />
-    <link rel="stylesheet" href="static/css/presentations.css" type="text/css" />
-    <link rel="stylesheet" href="static/css/ytlightbox.css" type="text/css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/custom.css" type="text/css" />
+    <link rel="stylesheet" href="css/effects.css" type="text/css" />
+    <link rel="stylesheet" href="css/presentations.css" type="text/css" />
+    <link rel="stylesheet" href="css/ytlightbox.css" type="text/css" />
     <link rel="canonical" href="http://prestodb.github.io/" />
     <meta name="viewport" content="width=device-width">
     <meta property="og:type" content="website">
