--- a/website/static/what-is-presto.html
+++ b/website/static/what-is-presto.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Presto | Distributed SQL Query Engine for Data Analytics and the Data Lakehouse</title>
-  <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css" />
-  <link rel="stylesheet" href="static/css/custom.css" type="text/css" />
-  <link rel="stylesheet" href="static/css/effects.css" type="text/css" />
+  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+  <link rel="stylesheet" href="css/custom.css" type="text/css" />
+  <link rel="stylesheet" href="css/effects.css" type="text/css" />
   <link rel="canonical" href="http://prestodb.github.io/" />
   <meta name="viewport" content="width=device-width">
   <meta property="og:type" content="website">
@@ -86,14 +86,12 @@
               <a class="nav-link" aria-current="page" href="docs/current" target="_blank">Docs</a>
             </li>
           </ul>
-          <div>
-            <a href="https://github.com/prestodb/presto" target="_blank" rel="noopener noreferrer"
-              class="navbar__item navbar__link nav-icon nav-github"></a>
-            <a href="https://twitter.com/prestodb" target="_blank" rel="noopener noreferrer"
-              class="navbar__item navbar__link nav-icon nav-twitter"></a><a href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw"
-              target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-slack"></a><a
-              href="https://www.linkedin.com/company/presto-foundation/" target="_blank" rel="noopener noreferrer"
-              class="navbar__item navbar__link nav-icon nav-linkedin"></a>
+          <div class="nav-icons">
+            <a href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-slack"></a>
+            <a href="https://github.com/prestodb/presto" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-github"></a>
+            <a href="https://stackoverflow.com/questions/tagged/presto" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-stackoverflow"></a>
+            <a href="https://twitter.com/prestodb" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-twitter"></a>
+            <a href="https://www.linkedin.com/company/presto-foundation/" target="_blank"  rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-linkedin"></a>
           </div>
         </div>
       </div>
