Fix slack link and automate getting started version links

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -82,7 +82,7 @@
             </li>
           </ul>
           <div class="nav-icons">
-            <a href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-slack"></a>
+            <a href="https://communityinviter.com/apps/prestodb/prestodb" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-slack"></a>
             <a href="https://github.com/prestodb/presto" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-github"></a>
             <a href="https://stackoverflow.com/questions/tagged/presto" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-stackoverflow"></a>
             <a href="https://twitter.com/prestodb" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-twitter"></a>
@@ -266,7 +266,7 @@
           community events.</p>
       </div>
     </div>
-    <div class="community-buttons d-flex flex-wrap" style="place-content: center;"><a href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw"
+    <div class="community-buttons d-flex flex-wrap" style="place-content: center;"><a href="https://communityinviter.com/apps/prestodb/prestodb"
         target="_blank" class="btn btn-light" title="slack"><img src="img/icon-slack-color.svg" alt="slack"></a><a
         href="https://github.com/prestodb/presto" target="_blank" class="btn btn-light" title="github"><img
           src="img/icon-github-dark.svg" alt="github"></a><a href="https://twitter.com/prestodb" target="_blank"
@@ -311,7 +311,7 @@
       <div class="col footer__col">
         <ul class="footer__items clean-list">
           <li class="footer__title">Community</li>
-          <li class="footer__item"><a href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw" target="_blank" rel="noopener noreferrer"
+          <li class="footer__item"><a href="https://communityinviter.com/apps/prestodb/prestodb" target="_blank" rel="noopener noreferrer"
               class="footer__link-item">Slack <svg width="13.5" height="13.5" aria-hidden="true" viewBox="0 0 24 24"
                 class="iconExternalLink_node_modules-@docusaurus-theme-classic-lib-theme-IconExternalLink-styles-module">
                 <path fill="currentColor"
