--- a/website/static/community.html
+++ b/website/static/community.html
@@ -90,7 +90,7 @@
                             class="navbar__item navbar__link nav-icon nav-github"></a>
                         <a href="https://twitter.com/prestodb" target="_blank" rel="noopener noreferrer"
                             class="navbar__item navbar__link nav-icon nav-twitter"></a><a
-                            href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw" target="_blank" rel="noopener noreferrer"
+                            href="https://communityinviter.com/apps/prestodb/prestodb" target="_blank" rel="noopener noreferrer"
                             class="navbar__item navbar__link nav-icon nav-slack"></a><a
                             href="https://www.linkedin.com/company/presto-foundation/" target="_blank"
                             rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-linkedin"></a>
@@ -111,7 +111,7 @@
                 <h5 class="" style="max-width: 700px;"><b><span  class="countup" data-start="10" data-end="13.7" data-step="0.2" data-places="1">13.7</span>K</b> stars and growing. There are many ways to get started with the community.
                     The best place to start is by joining our Slack channel where you can meet other Presto engineers
                     and&nbsp;users.</h5>
-                <div class=""><a href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw" target="_blank"
+                <div class=""><a href="https://communityinviter.com/apps/prestodb/prestodb" target="_blank"
                         class="btn btn-red btn-xlg my-2"><img src="img/icon-slack-white.svg" alt="slack"
                             style="max-width: 1.5rem;"> Join Our Slack</a></div>
             </div>
@@ -161,7 +161,7 @@
     <div class="sequential-fadeup">
         <h2 class="text-center py-5 ">More Ways To Get Involved</h2>
         <div class="d-flex flex-wrap justify-content-center sequential-fadein mx-auto" style="max-width:900px">
-            <a href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw"
+            <a href="https://communityinviter.com/apps/prestodb/prestodb"
             class="btn btn-lg btn-outline-dark m-1 flex-fill equal-widths-50 text-nowrap" target="_blank"><img
                 src="img/icon-slack-color.svg" alt="slack" style="max-width: 1.5em;"> Join Slack</a>
             <a href="https://github.com/prestodb/presto/issues"
@@ -328,7 +328,7 @@
         <div class="col footer__col">
           <ul class="footer__items clean-list">
             <li class="footer__title">Community</li>
-            <li class="footer__item"><a href="https://join.slack.com/t/prestodb/shared_invite/zt-1e895j77n-zdX2Z3~6tFDnmFSruztQOw" target="_blank" rel="noopener noreferrer"
+            <li class="footer__item"><a href="https://communityinviter.com/apps/prestodb/prestodb" target="_blank" rel="noopener noreferrer"
                 class="footer__link-item">Slack <svg width="13.5" height="13.5" aria-hidden="true" viewBox="0 0 24 24"
                   class="iconExternalLink_node_modules-@docusaurus-theme-classic-lib-theme-IconExternalLink-styles-module">
                   <path fill="currentColor"
