metadata updates for static pages

--- a/website/static/community.html
+++ b/website/static/community.html
@@ -3,16 +3,21 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Presto | Distributed SQL Query Engine for Big Data</title>
+    <title>Presto Community: Meetups, Slack Channels, Projects & Tools</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/custom.css" type="text/css" />
     <link rel="stylesheet" href="css/effects.css" type="text/css" />
-    <link rel="canonical" href="http://prestodb.github.io/" />
+    <link rel="canonical" href="https://prestodb.io/community.html" />
     <meta name="viewport" content="width=device-width">
+    <meta name="robots" content="follow, index"/>
+    <meta name="description" content="Be a part of the Presto Community. Join our vibrant Slack channel to connect with other Presto engineers, find a Meetup group near you, or work on a project."/>
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Presto | Community">
-    <meta property="og:description" content="Distributed SQL Query Engine for Big Data">
+    <meta property="og:title" content="Presto Community: Meetups, Slack Channels, Projects & Tools">
+    <meta property="og:description" content="Be a part of the Presto Community. Join our vibrant Slack channel to connect with other Presto engineers, find a Meetup group near you, or work on a project.">
     <meta property="og:image" content="static/presto-og.png">
+    <meta name="twitter:card" content="static/presto-og.png" />
+    <meta name="twitter:title" content="Presto Community: Meetups, Slack Channels, Projects & Tools" />
+    <meta name="twitter:description" content="Be a part of the Presto Community. Join our vibrant Slack channel to connect with other Presto engineers, find a Meetup group near you, or work on a project." />
   <link rel="icon" type="image/x-icon" href="img/icon-presto-dots-color.svg">
     <script async src="static/js/bootstrap.bundle.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>
@@ -85,20 +90,17 @@
                             <a class="nav-link" aria-current="page" href="docs/current" target="_blank">Docs</a>
                         </li>
                     </ul>
-                    <div>
-                        <a href="https://github.com/prestodb/presto" target="_blank" rel="noopener noreferrer"
-                            class="navbar__item navbar__link nav-icon nav-github"></a>
-                        <a href="https://twitter.com/prestodb" target="_blank" rel="noopener noreferrer"
-                            class="navbar__item navbar__link nav-icon nav-twitter"></a><a
-                            href="https://communityinviter.com/apps/prestodb/prestodb" target="_blank" rel="noopener noreferrer"
-                            class="navbar__item navbar__link nav-icon nav-slack"></a><a
-                            href="https://www.linkedin.com/company/presto-foundation/" target="_blank"
-                            rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-linkedin"></a>
+                    <div class="nav-icons">
+                        <a href="https://communityinviter.com/apps/prestodb/prestodb" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-slack"></a>
+                        <a href="https://github.com/prestodb/presto" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-github"></a>
+                        <a href="https://stackoverflow.com/questions/tagged/presto" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-stackoverflow"></a>
+                        <a href="https://twitter.com/prestodb" target="_blank" rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-twitter"></a>
+                        <a href="https://www.linkedin.com/company/presto-foundation/" target="_blank"  rel="noopener noreferrer" class="navbar__item navbar__link nav-icon nav-linkedin"></a>
+                      </div>
                     </div>
-                </div>
-            </div>
-        </nav>
-    </header>
+                  </div>
+                </nav>
+              </header>
 
 <section class="bg-silver-gradient bottom-cap-white">
     <div class="container-fluid wrapper pb-5">
