--- a/website/static/getting-started.html
+++ b/website/static/getting-started.html
@@ -3,16 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Presto | Distributed SQL Query Engine for Big Data</title>
+  <title>Launch Presto: Local download, JDBC, Docker or on AWS Cloud</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/custom.css" type="text/css" />
   <link rel="stylesheet" href="css/effects.css" type="text/css" />
-  <link rel="canonical" href="http://prestodb.github.io/" />
+  <link rel="canonical" href="https://prestodb.io/getting-started.html" />
   <meta name="viewport" content="width=device-width">
+  <meta name="robots" content="follow, index"/>
+  <meta name="description" content="Get started with a local installation of Presto, or try the SaaS version. Find additional learning resources or get help on how to install and run PrestoDB."/>
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Presto | Get Started">
-  <meta property="og:description" content="Distributed SQL Query Engine for Big Data">
+  <meta property="og:title" content="Launch Presto: Local download, JDBC, Docker or on AWS Cloud">
+  <meta property="og:description" content="Get started with a local installation of Presto, or try the SaaS version. Find additional learning resources or get help on how to install and run PrestoDB.">
   <meta property="og:image" content="static/presto-og.png">
+  <meta name="twitter:card" content="static/presto-og.png" />
+  <meta name="twitter:title" content="Launch Presto: Local download, JDBC, Docker or on AWS Cloud" />
+  <meta name="twitter:description" content="Get started with a local installation of Presto, or try the SaaS version. Find additional learning resources or get help on how to install and run PrestoDB." />
   <link rel="icon" type="image/x-icon" href="img/icon-presto-dots-color.svg">
   <script async src="static/js/bootstrap.bundle.min.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>
