--- a/website/static/index.html
+++ b/website/static/index.html
@@ -3,16 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Presto | Distributed SQL Query Engine for Big Data</title>
+  <title>Presto: Free, Open-Source SQL Query Engine for any Data</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/custom.css" type="text/css" />
   <link rel="stylesheet" href="css/effects.css" type="text/css" />
   <link rel="canonical" href="http://prestodb.github.io/" />
   <meta name="viewport" content="width=device-width">
+  <meta name="robots" content="follow, index"/>
+  <meta name="description" content="PrestoDB lets you run interactive/ad-hoc SQL queries at sub-second performance. Query data lakes, lakehouses, or databases. Runs reliably at massive scale."/>
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Presto | Distributed SQL Query Engine for Big Data">
-  <meta property="og:description" content="Distributed SQL Query Engine for Big Data">
+  <meta property="og:title" content="Presto: Free, Open-Source SQL Query Engine for any Data">
+  <meta property="og:description" content="PrestoDB lets you run interactive/ad-hoc SQL queries at sub-second performance. Query data lakes, lakehouses, or databases. Runs reliably at massive scale.">
   <meta property="og:image" content="static/presto-og.png">
+  <meta name="twitter:card" content="static/presto-og.png" />
+  <meta name="twitter:title" content="Presto: Free, Open-Source SQL Query Engine for any Data" />
+  <meta name="twitter:description" content="PrestoDB lets you run interactive/ad-hoc SQL queries at sub-second performance. Query data lakes, lakehouses, or databases. Runs reliably at massive scale." />
+  <meta name="twitter:site" content="@@securelink" />
   <link rel="icon" type="image/x-icon" href="img/icon-presto-dots-color.svg">
   <script async src="static/js/bootstrap.bundle.min.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>
