--- a/website/static/join.html
+++ b/website/static/join.html
@@ -3,16 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Presto | Distributed SQL Query Engine for Big Data</title>
+  <title>Join the Presto Foundation</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/custom.css" type="text/css" />
   <link rel="stylesheet" href="css/effects.css" type="text/css" />
-  <link rel="canonical" href="http://prestodb.github.io/" />
+  <link rel="canonical" href="https://prestodb.io/community.html" />
   <meta name="viewport" content="width=device-width">
+  <meta name="robots" content="follow, index"/>
+  <meta name="description" content="Become a part of the funding and governance of the Presto open source projecct."/>
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Presto | Join the Presto Foundation">
-  <meta property="og:description" content="Distributed SQL Query Engine for Big Data">
+  <meta property="og:title" content="Join the Presto Foundation">
+  <meta property="og:description" content="Become a part of the funding and governance of the Presto open source projecct.">
   <meta property="og:image" content="static/presto-og.png">
+  <meta name="twitter:card" content="static/presto-og.png" />
+  <meta name="twitter:title" content="Join the Presto Foundation" />
+  <meta name="twitter:description" content="Become a part of the funding and governance of the Presto open source projecct." />
   <link rel="icon" type="image/x-icon" href="img/icon-presto-dots-color.svg">
   <script async src="static/js/bootstrap.bundle.min.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>
