--- a/website/static/powered-by-presto.html
+++ b/website/static/powered-by-presto.html
@@ -2,19 +2,22 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Presto | Powered by Presto</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="css/custom.css" type="text/css" />
-    <link rel="stylesheet" href="css/effects.css" type="text/css" />
-    <link rel="stylesheet" href="css/presentations.css" type="text/css" />
-    <link rel="stylesheet" href="css/ytlightbox.css" type="text/css" />
-    <link rel="canonical" href="http://prestodb.github.io/" />
-    <meta name="viewport" content="width=device-width">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Presto | Powered by Presto">
-    <meta property="og:description" content="Distributed SQL Query Engine for Big Data">
-    <meta property="og:image" content="static/presto-og.png">
+  <meta charset="utf-8">
+  <title>Who uses Presto? PrestoDB Case Studies and Companies</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+  <link rel="stylesheet" href="css/custom.css" type="text/css" />
+  <link rel="stylesheet" href="css/effects.css" type="text/css" />
+  <link rel="canonical" href="https://prestodb.io/powered-by-presto.html" />
+  <meta name="viewport" content="width=device-width">
+  <meta name="robots" content="follow, index"/>
+  <meta name="description" content="Learn how Facebook (Meta), Uber, Twitter, and Ahana build on open-source Presto. Read detailed blogs to understand PrestoDB use cases and implementations."/>
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Who uses Presto? PrestoDB Case Studies and Companies">
+  <meta property="og:description" content="Learn how Facebook (Meta), Uber, Twitter, and Ahana build on open-source Presto. Read detailed blogs to understand PrestoDB use cases and implementations.">
+  <meta property="og:image" content="static/presto-og.png">
+  <meta name="twitter:card" content="static/presto-og.png" />
+  <meta name="twitter:title" content="Who uses Presto? PrestoDB Case Studies and Companies" />
+  <meta name="twitter:description" content="Learn how Facebook (Meta), Uber, Twitter, and Ahana build on open-source Presto. Read detailed blogs to understand PrestoDB use cases and implementations." />
   <link rel="icon" type="image/x-icon" href="img/icon-presto-dots-color.svg">
     <script async src="static/js/bootstrap.bundle.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>
