--- a/website/static/videos.html
+++ b/website/static/videos.html
@@ -2,19 +2,22 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Presto | Videos</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="css/custom.css" type="text/css" />
-    <link rel="stylesheet" href="css/effects.css" type="text/css" />
-    <link rel="stylesheet" href="css/presentations.css" type="text/css" />
-    <link rel="stylesheet" href="css/ytlightbox.css" type="text/css" />
-    <link rel="canonical" href="http://prestodb.github.io/" />
-    <meta name="viewport" content="width=device-width">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Presto | Videos">
-    <meta property="og:description" content="Distributed SQL Query Engine for Big Data">
-    <meta property="og:image" content="static/presto-og.png">
+  <meta charset="utf-8">
+  <title>Presto Videos: Talks, Webinars, and Events (On Demand)</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+  <link rel="stylesheet" href="css/custom.css" type="text/css" />
+  <link rel="stylesheet" href="css/effects.css" type="text/css" />
+  <link rel="canonical" href="https://prestodb.io/videos.html" />
+  <meta name="viewport" content="width=device-width">
+  <meta name="robots" content="follow, index"/>
+  <meta name="description" content="Recordings of Presto meetups and sessions from previous Prestocon events, as well as webinars and other video resources. Keep up with the latest trends."/>
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Presto Videos: Talks, Webinars, and Events (On Demand)">
+  <meta property="og:description" content="Recordings of Presto meetups and sessions from previous Prestocon events, as well as webinars and other video resources. Keep up with the latest trends.">
+  <meta property="og:image" content="static/presto-og.png">
+  <meta name="twitter:card" content="static/presto-og.png" />
+  <meta name="twitter:title" content="Presto Videos: Talks, Webinars, and Events (On Demand)" />
+  <meta name="twitter:description" content="Recordings of Presto meetups and sessions from previous Prestocon events, as well as webinars and other video resources. Keep up with the latest trends." />
   <link rel="icon" type="image/x-icon" href="img/icon-presto-dots-color.svg">
     <script async src="static/js/bootstrap.bundle.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>
