--- a/website/static/what-is-presto.html
+++ b/website/static/what-is-presto.html
@@ -3,16 +3,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Presto | Distributed SQL Query Engine for Data Analytics and the Data Lakehouse</title>
+  <title>What is Presto? Key Benefits and Use Cases of PrestoDB</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/custom.css" type="text/css" />
   <link rel="stylesheet" href="css/effects.css" type="text/css" />
-  <link rel="canonical" href="http://prestodb.github.io/" />
+  <link rel="canonical" href="https://prestodb.io/what-is-presto.html" />
   <meta name="viewport" content="width=device-width">
+  <meta name="robots" content="follow, index"/>
+  <meta name="description" content="Read the key facts about open source Presto, the project that powers lakehouse analytics for companies like Meta and Uber. Learn why companies choose PrestoDB."/>
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Presto | Distributed SQL Query Engine for Big Data">
-  <meta property="og:description" content="Distributed SQL Query Engine for Big Data">
+  <meta property="og:title" content="What is Presto? Key Benefits and Use Cases of PrestoDB">
+  <meta property="og:description" content="Read the key facts about open source Presto, the project that powers lakehouse analytics for companies like Meta and Uber. Learn why companies choose PrestoDB.">
   <meta property="og:image" content="static/presto-og.png">
+  <meta name="twitter:card" content="static/presto-og.png" />
+  <meta name="twitter:title" content="What is Presto? Key Benefits and Use Cases of PrestoDB" />
+  <meta name="twitter:description" content="Read the key facts about open source Presto, the project that powers lakehouse analytics for companies like Meta and Uber. Learn why companies choose PrestoDB." />
   <link rel="icon" type="image/x-icon" href="img/icon-presto-dots-color.svg">
   <script async src="static/js/bootstrap.bundle.min.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82811140-44"></script>
