--- a/website/static/index.html
+++ b/website/static/index.html
@@ -74,7 +74,6 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="what-is-presto.html">What is Presto?</a></li>
-                <li><a class="dropdown-item" href="blog">Blog</a></li>
                 <li><a class="dropdown-item" href="powered-by-presto.html">Powered By Presto</a></li>
                 <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
                 <li><a class="dropdown-item" href="videos.html">Videos</a></li>
@@ -82,6 +81,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="community.html">Community</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="docs/current" target="_blank">Docs</a>
@@ -113,7 +115,7 @@
         src="img/icon-github-star.svg" alt="star" style="max-width:1.5rem" />&nbsp;<span id="starcount">10</span>K
     </a>
     <script>
-      document.getElementById('starcount').innerHTML = presto_latest_stars;
+      document.getElementById('starcount').innerHTML = 14.2 //presto_latest_stars ;
     </script>
   </div>
 </div>
