--- a/website/static/videos.html
+++ b/website/static/videos.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/custom.css" type="text/css" />
   <link rel="stylesheet" href="css/effects.css" type="text/css" />
+  <link rel="stylesheet" href="css/presentations.css" type="text/css" />
+  <link rel="stylesheet" href="css/ytlightbox.css" type="text/css" />
   <link rel="canonical" href="https://prestodb.io/videos.html" />
   <meta name="viewport" content="width=device-width">
   <meta name="robots" content="follow, index"/>
@@ -57,7 +59,6 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="what-is-presto.html">What is Presto?</a></li>
-                <li><a class="dropdown-item" href="blog">Blog</a></li>
                 <li><a class="dropdown-item" href="powered-by-presto.html">Powered By Presto</a></li>
                 <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
                 <li><a class="dropdown-item" href="videos.html">Videos</a></li>
@@ -65,6 +66,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="community.html">Community</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="docs/current" target="_blank">Docs</a>
