--- a/website/static/index.html
+++ b/website/static/index.html
@@ -120,7 +120,7 @@
   </div>
 </div>
 
-<section style="background:#FFA601;position:relative;">
+<!-- <section style="background:#FFA601;position:relative;">
   <div style="position:absolute;inset: 0 75% 0 0;background:url('img/icon-presto-dots-color.svg') right center no-repeat transparent;background-size:cover;filter:brightness(0) invert(1);opacity:0.25"></div>
   <div class="container-fluid wrapper py-3">
     <div class="row" style="max-width:800px;margin:0 auto; text-align:center;">
@@ -130,13 +130,11 @@
         <div class="col-12 col-md-6 mx-auto text-white text-center" style="font-size:1.2rem;" >
           <div>COMPUTER HISTORY MUSEUM</div>
           <div class="small" style="font-size:14px">MOUNTAIN VIEW, CA</div>
-        <a href="https://events.linuxfoundation.org/prestocon/register/" class="btn btn-sm btn-light  mt-3" target="_blank">Register</a>
-        &nbsp;<a href="https://events.linuxfoundation.org/prestocon/program/cfp/" class="btn btn-sm btn-light  mt-3" target="_blank">Submit to Speak</a>
-
+        <a href="#" class="btn btn-sm btn-light  mt-3" target="_blank">Register</a>
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <div class="container-fluid wrapper pb-5">
   <div class="my-5 text-center">
