--- a/website/static/index.html
+++ b/website/static/index.html
@@ -115,7 +115,7 @@
         src="img/icon-github-star.svg" alt="star" style="max-width:1.5rem" />&nbsp;<span id="starcount">10</span>K
     </a>
     <script>
-      document.getElementById('starcount').innerHTML = 14.2 //presto_latest_stars ;
+      document.getElementById('starcount').innerHTML = 14.4 //presto_latest_stars ;
     </script>
   </div>
 </div>
@@ -260,6 +260,8 @@
       <img src="img/presto-users/logo-platform24.png" alt="" />
       <img src="img/presto-users/logo-bytedance.svg" alt="" />
       <img src="img/presto-users/logo-tencent.png" alt="" />
+      <img src="img/presto-users/logo-twilio.svg" alt="" />
+      <img src="img/presto-users/logo-rippling.png" alt="" />
     </div>
     <a href="powered-by-presto.html" class="btn  btn-primary mt-3" target="_blank" >See More</a>
   </div>
