--- a/website/static/community.html
+++ b/website/static/community.html
@@ -118,6 +118,7 @@
                 <div class=""><a href="https://communityinviter.com/apps/prestodb/prestodb" target="_blank"
                         class="btn btn-red btn-xlg my-2"><img src="img/icon-slack-white.svg" alt="slack"
                             style="max-width: 1.5rem;"> Join Our Slack</a></div>
+                
             </div>
         </div>
     </div>
@@ -180,6 +181,10 @@
                     src="img/icon-forum-dark.svg" alt="forums" style="max-width: 1.5em;"> Blog About Your Use Case</a>
 
         </div>
+        <div style="text-align:center;max-width:410px;margin:0 auto;>
+  <a href="https://forms.gle/LPB7V9XLpZmnoEam8" class="btn btn-lg btn-outline-dark m-1 flex-fill equal-widths-50 text-nowrap revealed" target="_blank">Fill out the Community Survey*</a><br/>
+we'll send you a swag pack as a thanks!
+</div>
     </div>
 </section>
 
